--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@
 .btn-ttc:hover,
 .btn-ttc:active {
     position: relative;
-    left: 60px;
+    left: 70px;
+    top: 10px;
     color: white;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background-color: #EC4986;
